PayPal Standard: Costs for checkout attributes were double charged

--- a/src/Plugins/DiscountRules.HadSpentAmount/Localization/resources.de-de.xml
+++ b/src/Plugins/DiscountRules.HadSpentAmount/Localization/resources.de-de.xml
@@ -16,7 +16,7 @@
     <Value>Legt fest, ob sich der angegebene Betrag auf die Zwischensumme im aktuellen Warenkorb oder - wenn inaktiv - auf die Summe aller zuvor vom Kunden getätigten Bestellungen bezieht.</Value>
   </LocaleResource>
   <LocaleResource Name="Fields.BasketSubTotalIncludesDiscounts">
-    <Value>Positions-Rabatte berücktichtigen</Value>
+    <Value>Positions-Rabatte berücksichtigen</Value>
   </LocaleResource>
   <LocaleResource Name="Fields.BasketSubTotalIncludesDiscounts.Hint">
     <Value>Wenn aktiv, ist der Vergleichswert die Warenkorbsumme abzüglich aller Positions-Rabatte.</Value>
