Fixes #434 Shipping.ByTotal: Make grid pageable

--- a/src/Plugins/Shipping.ByTotal/Localization/resources.de-de.xml
+++ b/src/Plugins/Shipping.ByTotal/Localization/resources.de-de.xml
@@ -88,6 +88,9 @@
   <LocaleResource Name="Fields.SmallQuantitySurcharge">
     <Value>Mindermengenzuschlag</Value>
   </LocaleResource>
+  <LocaleResource Name="Fields.SmallQuantitySurcharge.Hint">
+    <Value>Mindermengenzuschlag</Value>
+  </LocaleResource>
 	<LocaleResource Name="Fields.Store">
 		<Value>Shop</Value>
 	</LocaleResource>
