--- a/src/Plugins/SmartStore.PayPal/Localization/resources.de-de.xml
+++ b/src/Plugins/SmartStore.PayPal/Localization/resources.de-de.xml
@@ -6,6 +6,13 @@
   <LocaleResource Name="Plugins.Description.SmartStore.PayPal" AppendRootKey="false">
     <Value>Stellt die PayPal-Zahlungsmethoden PayPal Express, PayPal Standard und PayPal Direct zur Verfügung.</Value>
   </LocaleResource>
+
+  <LocaleResource Name="Plugins.Payments.PayPalExpress" AppendRootKey="false">
+    <Children>
+      
+    </Children>
+  </LocaleResource>
+  
   
 	<LocaleResource Name="Plugins.FriendlyName.Payments.PayPalExpress" AppendRootKey="false">
 		<Value>PayPal Express</Value>
