--- a/src/Plugins/SmartStore.OfflinePayment/Localization/resources.de-de.xml
+++ b/src/Plugins/SmartStore.OfflinePayment/Localization/resources.de-de.xml
@@ -48,5 +48,27 @@
     </Children>
   </LocaleResource>
 
+  <!-- Invoice -->
+  <LocaleResource Name="Plugins.FriendlyName.Payments.Invoice" AppendRootKey="false">
+    <Value>Rechnung</Value>
+  </LocaleResource>
+  <LocaleResource Name="Plugins.Payment.Invoice" AppendRootKey="false">
+    <Children>
+      <LocaleResource Name="AdminInstruction">
+        <Value>
+          <![CDATA[ ]]>
+        </Value>
+      </LocaleResource>
+      <LocaleResource Name="PaymentInfoDescription">
+        <Value>
+          <![CDATA[
+        <p>Sobald Ihre Bestellung abgeschloßen ist, werden Sie persönlich von einem unserer Mitarbeiter kontaktiert, um die Bestellung zu bestätigen.
+        </p><p>P.S. Dieser Text kann im Admin-Bereich editiert werden.</p>
+      ]]>
+        </Value>
+      </LocaleResource>
+    </Children>
+  </LocaleResource>
+
 
 </Language>
