--- a/src/Plugins/SmartStore.OfflinePayment/Localization/resources.en-us.xml
+++ b/src/Plugins/SmartStore.OfflinePayment/Localization/resources.en-us.xml
@@ -61,5 +61,47 @@
     </Children>
   </LocaleResource>
 
+  <!-- PayInStore -->
+  <LocaleResource Name="Plugins.FriendlyName.Payments.PayInStore" AppendRootKey="false">
+    <Value>Pay in store</Value>
+  </LocaleResource>
+  <LocaleResource Name="Plugins.Payment.PayInStore" AppendRootKey="false">
+    <Children>
+      <LocaleResource Name="AdminInstruction">
+        <Value>
+          <![CDATA[ ]]>
+        </Value>
+      </LocaleResource>
+      <LocaleResource Name="PaymentInfoDescription">
+        <Value>
+          <![CDATA[
+            <p>Reserve items at your local store, and pay in store when you pick up your order.<br />Our store location: USA, New York,...</p><p>P.S. You can edit this text from admin panel.</p>
+          ]]>
+        </Value>
+      </LocaleResource>
+    </Children>
+  </LocaleResource>
+
+  <!-- Prepayment -->
+  <LocaleResource Name="Plugins.FriendlyName.Payments.Prepayment" AppendRootKey="false">
+    <Value>Prepayment</Value>
+  </LocaleResource>
+  <LocaleResource Name="Plugins.Payment.Prepayment" AppendRootKey="false">
+    <Children>
+      <LocaleResource Name="AdminInstruction">
+        <Value>
+          <![CDATA[ ]]>
+        </Value>
+      </LocaleResource>
+      <LocaleResource Name="PaymentInfoDescription">
+        <Value>
+          <![CDATA[
+            <p>In cases where an order is placed, an authorized representative will contact you, personally or over telephone, to confirm the order.<br />After the order is confirmed, it will be processed.<br />Orders once confirmed, cannot be cancelled.</p><p>P.S. You can edit this text from admin panel.</p>
+          ]]>
+        </Value>
+      </LocaleResource>
+    </Children>
+  </LocaleResource>
+
  
 </Language>
