--- a/src/Plugins/Payments.DirectDebit/Localization/resources.en-us.xml
+++ b/src/Plugins/Payments.DirectDebit/Localization/resources.en-us.xml
@@ -99,7 +99,7 @@
   <LocaleResource Name="PaymentInfoDescription">
     <Value>
       <![CDATA[
-        <p>In cases where an order is placed, an authorized representative will contact you, personally or over telephone, to confirm the order.<br />After the order is confirmed, it will be processed.<br />Orders once confirmed, cannot be cancelled.</p><p>P.S. You can edit this text from admin panel.</p>
+        Once your order is placed, you will be contacted by our stuff to confirm the order.
       ]]>
     </Value>
   </LocaleResource>
