--- a/src/Plugins/SmartStore.OfflinePayment/Localization/resources.de-de.xml
+++ b/src/Plugins/SmartStore.OfflinePayment/Localization/resources.de-de.xml
@@ -40,9 +40,8 @@
       <LocaleResource Name="PaymentInfoDescription">
         <Value>
           <![CDATA[
-        <p>Sobald Ihre Bestellung abgeschloßen ist, werden Sie persönlich von einem unserer Mitarbeiter kontaktiert, um die Bestellung zu bestätigen.
-        </p><p>P.S. Dieser Text kann im Admin-Bereich editiert werden.</p>
-      ]]>
+            Sobald Ihre Bestellung abgeschloßen ist, werden Sie persönlich von einem unserer Mitarbeiter kontaktiert, um die Bestellung zu bestätigen.
+          ]]>
         </Value>
       </LocaleResource>   
     </Children>
@@ -62,9 +61,8 @@
       <LocaleResource Name="PaymentInfoDescription">
         <Value>
           <![CDATA[
-        <p>Sobald Ihre Bestellung abgeschloßen ist, werden Sie persönlich von einem unserer Mitarbeiter kontaktiert, um die Bestellung zu bestätigen.
-        </p><p>P.S. Dieser Text kann im Admin-Bereich editiert werden.</p>
-      ]]>
+            Sobald Ihre Bestellung abgeschloßen ist, werden Sie persönlich von einem unserer Mitarbeiter kontaktiert, um die Bestellung zu bestätigen.
+          ]]>
         </Value>
       </LocaleResource>
     </Children>
@@ -84,8 +82,7 @@
       <LocaleResource Name="PaymentInfoDescription">
         <Value>
           <![CDATA[
-            <p>Reservieren Sie Produkte und zahlen Sie an der Kasse in unserem Ladenlokal.<br />Und Hier finden Sie uns: Dortmund, Westenhellweg 88,...</p>
-            <p>P.S. Dieser Text kann im Admin-Bereich editiert werden.</p>
+            Reservieren Sie Produkte und zahlen Sie an der Kasse in unserem Ladenlokal.
           ]]>
         </Value>
       </LocaleResource>
@@ -106,8 +103,7 @@
       <LocaleResource Name="PaymentInfoDescription">
         <Value>
           <![CDATA[
-            <p>Sobald Ihre Bestellung abgeschloßen ist, werden Sie persönlich von einem unserer Mitarbeiter kontaktiert, um die Bestellung zu bestätigen.
-            </p><p>P.S. Dieser Text kann im Admin-Bereich editiert werden.</p>
+            Sobald Ihre Bestellung abgeschloßen ist, werden Sie persönlich von einem unserer Mitarbeiter kontaktiert, um die Bestellung zu bestätigen.
           ]]>
         </Value>
       </LocaleResource>
