--- a/src/Plugins/SmartStore.OfflinePayment/Localization/resources.de-de.xml
+++ b/src/Plugins/SmartStore.OfflinePayment/Localization/resources.de-de.xml
@@ -130,5 +130,86 @@
     </Children>
   </LocaleResource>
 
+  <!-- DirectDebit -->
+  <LocaleResource Name="Plugins.FriendlyName.Payments.DirectDebit" AppendRootKey="false">
+    <Value>Lastschrifteinzug (ELV)</Value>
+  </LocaleResource>
+  <LocaleResource Name="Plugins.Payments.DirectDebit" AppendRootKey="false">
+    <Children>
+      <LocaleResource Name="AdminInstruction">
+        <Value>
+          <![CDATA[ ]]>
+        </Value>
+      </LocaleResource>
+      <LocaleResource Name="PaymentInfoDescription">
+        <Value>
+          <![CDATA[
+            Sobald Ihre Bestellung abgeschloßen ist, werden Sie persönlich von einem unserer Mitarbeiter kontaktiert, um die Bestellung zu bestätigen.
+          ]]>
+        </Value>
+      </LocaleResource>
+    <LocaleResource Name="DirectDebitAccountHolder">
+      <Value>Kontoinhaber</Value>
+    </LocaleResource>
+    <LocaleResource Name="DirectDebitAccountHolder.Hint">
+      <Value>Name des Kontoinhabers</Value>
+    </LocaleResource>
+    <LocaleResource Name="DirectDebitAccountNumber">
+      <Value>Kontonummer</Value>
+    </LocaleResource>
+    <LocaleResource Name="DirectDebitBankCode">
+      <Value>BLZ</Value>
+    </LocaleResource>
+    <LocaleResource Name="DirectDebitBankCode.Hint">
+      <Value>Bankleitzahl</Value>
+    </LocaleResource>
+    <LocaleResource Name="DirectDebitCountry">
+      <Value>Land</Value>
+    </LocaleResource>
+    <LocaleResource Name="DirectDebitCountry.Hint">
+      <Value>Land der Bankverbindung.</Value>
+    </LocaleResource>
+    <LocaleResource Name="DirectDebitBankName">
+      <Value>Name der Bank</Value>
+    </LocaleResource>
+    <LocaleResource Name="DirectDebitIban">
+      <Value>IBAN</Value>
+    </LocaleResource>
+    <LocaleResource Name="DirectDebitIban.Hint">
+      <Value>International Bank Account Number</Value>
+    </LocaleResource>
+    <LocaleResource Name="DirectDebitBic">
+      <Value>BIC</Value>
+    </LocaleResource>
+    <LocaleResource Name="DirectDebitBic.Hint">
+      <Value>Bank Interchange Code</Value>
+    </LocaleResource>
+    <LocaleResource Name="EnterIBAN">
+      <Value>IBAN eingeben</Value>
+    </LocaleResource>
+    <LocaleResource Name="NoEnterIBAN">
+      <Value>Nein</Value>
+    </LocaleResource>
+    <LocaleResource Name="YesEnterIBAN">
+      <Value>Ja</Value>
+    </LocaleResource>
+    <LocaleResource Name="DirectDebitAccountHolderRequired">
+      <Value>Geben Sie bitte den Namen des Kontoinhabers ein.</Value>
+    </LocaleResource>
+    <LocaleResource Name="DirectDebitAccountNumberRequired">
+      <Value>Geben Sie bitte Ihre Kontonummer ein.</Value>
+    </LocaleResource>
+    <LocaleResource Name="DirectDebitBankCodeRequired">
+      <Value>Geben Sie bitte die Bankleitzahl (BLZ) ein.</Value>
+    </LocaleResource>
+    <LocaleResource Name="DirectDebitIbanRequired">
+      <Value>Geben Sie bitte die IBAN (International Bank Account Number) ein.</Value>
+    </LocaleResource>
+    <LocaleResource Name="DirectDebitBicRequired">
+      <Value>Geben Sie bitte die BIC (Bank Interchange Code) ein.</Value>
+    </LocaleResource>
+    </Children>
+  </LocaleResource>
+
 
 </Language>
