--- a/src/Plugins/SmartStore.OfflinePayment/Localization/resources.en-us.xml
+++ b/src/Plugins/SmartStore.OfflinePayment/Localization/resources.en-us.xml
@@ -123,5 +123,89 @@
     </Children>
   </LocaleResource>
 
+  <!-- DirectDebit -->
+  <LocaleResource Name="Plugins.FriendlyName.Payments.DirectDebit" AppendRootKey="false">
+    <Value>Direct Debit</Value>
+  </LocaleResource>
+  <LocaleResource Name="Plugins.Payments.DirectDebit" AppendRootKey="false">
+    <Children>
+      <LocaleResource Name="AdminInstruction">
+        <Value>
+          <![CDATA[ ]]>
+        </Value>
+      </LocaleResource>
+      <LocaleResource Name="PaymentInfoDescription">
+        <Value>
+          <![CDATA[
+             Once your order is placed, you will be contacted by our stuff to confirm the order.
+          ]]>
+        </Value>
+      </LocaleResource>
+      <LocaleResource Name="DirectDebitAccountHolder">
+        <Value>Account holder name</Value>
+      </LocaleResource>
+      <LocaleResource Name="DirectDebitAccountHolder.Hint">
+        <Value>Holder name of the bank account</Value>
+      </LocaleResource>
+      <LocaleResource Name="DirectDebitAccountNumber">
+        <Value>Account number</Value>
+      </LocaleResource>
+      <LocaleResource Name="DirectDebitBankCode">
+        <Value>Bank code</Value>
+      </LocaleResource>
+      <LocaleResource Name="DirectDebitBankCode.Hint">
+        <Value>Bank code number</Value>
+      </LocaleResource>
+      <LocaleResource Name="DirectDebitCountry">
+        <Value>Country</Value>
+      </LocaleResource>
+      <LocaleResource Name="DirectDebitCountry.Hint">
+        <Value>Country of your bank account.</Value>
+      </LocaleResource>
+      <LocaleResource Name="DirectDebitBankName">
+        <Value>Bank name</Value>
+      </LocaleResource>
+      <LocaleResource Name="DirectDebitBankName.Hint">
+        <Value>Name of your bank.</Value>
+      </LocaleResource>
+      <LocaleResource Name="DirectDebitIban">
+        <Value>IBAN</Value>
+      </LocaleResource>
+      <LocaleResource Name="DirectDebitIban.Hint">
+        <Value>International Bank Account Number</Value>
+      </LocaleResource>
+      <LocaleResource Name="DirectDebitBic">
+        <Value>BIC</Value>
+      </LocaleResource>
+      <LocaleResource Name="DirectDebitBic.Hint">
+        <Value>Bank Interchange Code</Value>
+      </LocaleResource>
+      <LocaleResource Name="EnterIban">
+        <Value>Enter IBAN</Value>
+      </LocaleResource>
+      <LocaleResource Name="NoEnterIban">
+        <Value>No</Value>
+      </LocaleResource>
+      <LocaleResource Name="YesEnterIban">
+        <Value>Yes</Value>
+      </LocaleResource>
+      <LocaleResource Name="DirectDebitAccountHolderRequired">
+        <Value>Please enter the name of the account holder.</Value>
+      </LocaleResource>
+      <LocaleResource Name="DirectDebitAccountNumberRequired">
+        <Value>Please enter your account number.</Value>
+      </LocaleResource>
+      <LocaleResource Name="DirectDebitBankCodeRequired">
+        <Value>Please enter the bank code.</Value>
+      </LocaleResource>
+      <LocaleResource Name="DirectDebitIBANRequired">
+        <Value>Please enter the IBAN (International Bank Account Number).</Value>
+      </LocaleResource>
+      <LocaleResource Name="DirectDebitBICRequired">
+        <Value>Please enter the BIC (Bank Interchange Code).</Value>
+      </LocaleResource>
+    </Children>
+  </LocaleResource>
+
  
 </Language>
