--- a/src/Plugins/SmartStore.GoogleMerchantCenter/Localization/resources.de-de.xml
+++ b/src/Plugins/SmartStore.GoogleMerchantCenter/Localization/resources.de-de.xml
@@ -1,4 +1,7 @@
 ﻿<Language Name="Deutsch" IsDefault="true" IsRightToLeft="false">
+  <LocaleResource Name="Plugins.FriendlyName.SmartStore.GoogleMerchantCenter" AppendRootKey="false">
+    <Value>Google Merchant Center (GMC) Feed</Value>
+  </LocaleResource>
 	<LocaleResource Name="AdminInstruction">
 		<Value>
 			<![CDATA[<ul>
